# tensor_playground

./: CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build-and-run-tests.yml
src/: CMakeLists.txt
src/Giles_tensor/: CMakeLists.txt  Giles_tensor.cpp  Giles_tensor.h
src/bench/: CMakeLists.txt  bench_Giles_template_tensor.cpp  bench_free_tensor.cpp  bench_template_tensor.cpp  params.h
src/helpers/: CMakeLists.txt  decreasing_degree_walker.h  increasing_degree_walker.h  index_word.h  multiplication_helpers.h  reversing_permutation.h  tensor_size_info.h
src/simple_free_tensor/: CMakeLists.txt  free_tensor.cpp  free_tensor.h
src/simple_templated_tensor/: CMakeLists.txt  simple_template_tensor.h  simple_tensor.cpp
src/template-Giles-tensor/: CMakeLists.txt  giles_template_tensor.h  mul_level_func.h
src/tests/: CMakeLists.txt  test_giles_tensor.cpp
src/tiled_access/: CMakeLists.txt  implementation.h  strided_rw.h  tile.h
tests/: CMakeLists.txt  simple-test.cpp  test_giles_tensor.cpp
